--- a/src/App.css
+++ b/src/App.css
@@ -596,7 +596,7 @@ h6 {
 
 @media screen and (min-width: 992px) {
   .tourlist {
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 1fr 1fr 1fr;
     width: 85vw;
   }
 }
